--- a/ccStyle.css
+++ b/ccStyle.css
@@ -4,12 +4,12 @@
 	border-box: box-sizing;
 }
 body{
-	background-color:rgba(255,138,82,.6);
+	background-image: url("images/carlyeboot.jpg");
 	font-size: 18px;
 	margin: 0 ;
 }
 #wrapper{
-	
+		background-color:rgba(255,138,82,.3);
 }
 nav {
 	background-color: #FFFFFF;
@@ -40,9 +40,11 @@ section.mainContent{
 	padding:3em  ;
 	line-height:2em;
 	
-
 }
-span {
+.innerContent{
+	background-color: #FFFFFF;
+}
+#hello {
 	display:block;
 	padding:.5em .5em 0 .5em;
 	font-family: 'Playfair Display', serif;
@@ -56,12 +58,65 @@ p{
 	border: 1px #FFFFFF solid;
 	border-radius: .2em;
 }
+img {
+	background-color: #FFFFFF;
+	margin: 0 6em;
+}
+
+.getToKnow{
+	background-color: #FFFFFF;
+	font-size: 1.2em;
+	font-weight: 900;
+	padding: .5em 1em;
+}
+.littleHistory p{
+	padding: 0 0 0 2em;
+
+}
+.buttonLeft{
+	background-color:rgba(255,138,82,.5);
+	float: left;
+	font-size: 6em;
+	color: #FFC2AA;
+	margin: 0;
+	border: 1px rgba(255,138,82,.5) solid;
+	padding: 0 .2em .04em .2em;
+}
+#portfolio{
+	text-align: center;
+	margin: 0 6em;
+	padding-top: 2em;
+	padding-bottom: 2em;
+}
+.buttonRight{
+	background-color:rgba(255,138,82,.5);
+	float: right;
+	font-size: 6em;
+	color: #FFC2AA;
+	margin-: 0;
+	pagdding: 2em 1em 2em 1 em;
+	border: 1px rgba(255,138,82,.5) solid;
+	padding: 0 .2em .04em .2em;
+}
+.contact{
+	font-size: 1em;
+}
+#contactMe{
+	display:block;
+	padding:.5em .5em 0 3em;
+	font-family: 'Playfair Display', serif;
+	font-style: italic;
+	font-weight: 700;
+	font-size:2.1em;
+}
 form{
 	margin: 0 auto;
 	padding: 1em;
 	background-color: #FFFFFF;
+	border: 1px #FFFFFF solid;
+	border-radius: .2em;
 }
-input {
+.fromInput {
 	display: block;
 	border: 1px rgb(95,219,209) solid;
 	border-radius: .2em;
@@ -74,4 +129,8 @@ input {
 	color: #FFFFFF;
 	border: 1px #FFFFFF solid;
 	border-radius: .4em;
+	
+}
+footer{
+ 	background-color:rgba(255,138,82,.3);
 }
